<resources>
    <string name="app_name">Strassen Multiplication</string>
    <string name="action_settings">Settings</string>
    <string name="input_hint">تعداد سطرهای ماتریس</string>
    <string name="input_hint_vertical">تعداد ستون های ماتریس</string>
    <string name="input_hint_full">آرایه مرتب نشده:\n</string>
    <string name="unsorted_array">آرایه مرتب نشده:\n</string>
    <string name="sorted_array">آرایه مرتب شده:\n</string>

    <string name="result_text_enter_string">با کلید تایید کیبورد میتوانید عدد بعدی را وارد کنید</string>
    <string name="log">آرایه مرتب شد</string>
    <string name="string_acceptable">آرایه مرتب شد</string>
    <string name="sort">مرتب کن</string>
    <string name="emptyEditText">لطفا یک عدد وارد کنید</string>
    <string name="title_activity_enter_matrix">ماتریس ها</string>
    <string name="matrix1_input">درایه های ماتریس اول را وارد کنید</string>
    <string name="matrix_input">درایه های ماتریس</string>
    <string name="matrix_output">خروجی ماتریس</string>
    <string name="matrix_full">ماتریس ها پر شده اند</string>
    <string name="random_fill">تصادفی پرکن</string>
    <string name="wait">لطفا صبر کنید</string>
</resources>
